# hostlist-parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  structures.rs
src/snapshots/: hostlist_parser__structures__tests__range_output_disjoint_iter.snap  hostlist_parser__tests__Combined Ranges.snap  hostlist_parser__tests__Duplicate without using a range.snap  hostlist_parser__tests__Empty expression.snap  hostlist_parser__tests__Invalid character in range (snowman).snap  hostlist_parser__tests__Large expression.snap  hostlist_parser__tests__Leading 0s.snap  hostlist_parser__tests__Multiple ranges per hostname in which the difference is 1 two formats.snap  hostlist_parser__tests__Multiple ranges per hostname in which the difference is 1.snap  hostlist_parser__tests__Multiple ranges per hostname in which the difference is gt 1.snap  hostlist_parser__tests__No separation between comma's.snap  hostlist_parser__tests__No separation between dash and comma.snap  hostlist_parser__tests__Overlapping ranges.snap  hostlist_parser__tests__Padding with a single and double digit number.snap  hostlist_parser__tests__Single item with prefix range starting at 0.snap  hostlist_parser__tests__Single item with single range and additional characters after range.snap  hostlist_parser__tests__Single item with three ranges separated by character.snap  hostlist_parser__tests__Single item with two ranges and no separation between the ranges.snap  hostlist_parser__tests__Single range per hostname with dup.snap  hostlist_parser__tests__disjoint_digits-2.snap  (+72 more)
