[package]
name = "hostlist-parser"
description = "Parses hostlist expressions into a Vec of Strings"
repository = "https://github.com/whamcloud/hostlist-parser"
keywords = ["hostlist", "pdsh", "hpc", "cluster"]
license = "MIT"
version = "0.1.3"
authors = ["IML Team <iml@whamcloud.com>"]
edition = "2018"

[dependencies]
combine = "4.1.0"
itertools = "0.9"

[dev-dependencies]
insta = "0.16"