[package]
name = "hostlist-parser"
description = "Parses hostlist expressions into a Vec of Strings"
repository = "https://github.com/whamcloud/hostlist-parser"
keywords = ["hostlist", "pdsh", "hpc", "cluster"]
license = "MIT"
version = "0.1.5"
authors = ["EMF Team <emf@whamcloud.com>"]
edition = "2021"

[dependencies]
combine = "4.6"
itertools = "0.10"

[dev-dependencies]
insta = "1.12"
