[package]
authors = ["EMF Team <emf@whamcloud.com>"]
description = "Parses hostlist expressions into a Vec of Strings"
edition = "2021"
keywords = ["hostlist", "pdsh", "hpc", "cluster"]
license = "MIT"
name = "hostlist-parser"
repository = "https://github.com/whamcloud/hostlist-parser"
version = "0.1.6"

[dependencies]
combine = "4.6"
itertools = "0.12"

[dev-dependencies]
insta = "1"
